<resources>

    <string name="app_name">Rums</string>
    <string name="welcome_message">Welcome to Rums!</string>
    <string name="settings_hint_username">username</string>
    <string name="settings_hint_age">age</string>
    <string name="settings_hint_phone">phone number</string>
    <string name="settings_hint_description">description</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_button_apply">Save</string>
    <string name="u_name">username:</string>
    <string name="u_email">email:</string>
    <string name="search_menu">Search</string>



    <string name="say_hello"><font fgcolor="#C6CACA">say hello</font></string>
    <string name="add_more"><font fgcolor="#C6CACA">add more</font></string>

</resources>